{
  "my_plans": "My Plans",
  "create_plan": "Create New Plan",
  "plan_details": "Plan Details",
  "event_date": "Event Date",
  "event_time": "Event Time",
  "recipient": "Surprise Recipient",
  "recipient_name": "Name",
...
